# PDF_Signer

./: .gitattributes  CLAUDE.md  README.md  docker-compose.demo.yml
backend/: constants.py  main.py  requirements.txt
backend/api/: config.py  export.py  history.py  signatures.py
backend/services/: composer.py  pdf_service.py  pdf_writer.py  signature_service.py
backend/tests/: test_delete_pages.py  test_demo_config.py  test_demo_export.py  test_demo_mode.py  test_demo_signature.py  test_signature_bg.py
docs/: DEMO.en.md  DEMO.ru.md  DEVELOPMENT.en.md  DEVELOPMENT.ru.md  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  constants.js  main.jsx
frontend/src/components/: CanvasEditor.jsx  DemoBanner.jsx  HistoryModal.jsx
frontend/src/components/__tests__/: DemoBanner.test.jsx
frontend/src/hooks/: useCanvas.js  useDocument.js  useExport.js  useSignatures.js  useSigningHistory.js
frontend/src/hooks/__tests__/: useSignatures.demo.test.jsx
frontend/src/i18n/__tests__/: resolveApiError.test.js
frontend/src/i18n/locales/: en.js  ru.js
frontend/src/lib/: blobCodec.js  config.js  demoStore.js  download.js
frontend/src/lib/__tests__/: config.test.js  demoStore.test.js
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
