[package]
name = "pdf-signer"
version = "1.1.0"
description = "PDF Signer — offline handwritten signature tool"
authors = ["TinaUma"]
edition = "2021"

[lib]
name = "pdf_signer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pdf-signer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Sidecar support in Tauri v2 comes from the tauri-plugin-shell plugin + a
# capability (see capabilities/default.json), not a `tauri` feature.
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native Save dialog for exporting / downloading files (WebView2 ignores the
# HTML <a download> trick, so the web download path is a no-op in the app).
tauri-plugin-dialog = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
